// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > スナップショット > エラー状態の HTML 構造 1`] = `
<div
  class="flex flex-col space-y-1"
>
  <div
    class="relative flex items-center"
  >
    <select
      aria-describedby="undefined-error"
      aria-invalid="true"
      class="w-full appearance-none bg-white border rounded-lg px-3 py-2.5 pr-10 transition-all cursor-pointer focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 disabled:bg-gray-100 disabled:text-gray-400 disabled:cursor-not-allowed border-red-500 focus:ring-red-500 focus:border-red-500"
    >
      <option
        value=""
      >
        選択してください
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
    </select>
    <div
      class="absolute right-3 flex items-center pointer-events-none text-gray-400"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </div>
  </div>
  <div
    class="text-red-500 text-sm ml-1"
    id="undefined-error"
    role="alert"
  >
    Error
  </div>
</div>
`;

exports[`Select > スナップショット > 通常状態の HTML 構造 1`] = `
<div
  class="flex flex-col space-y-1"
>
  <div
    class="relative flex items-center"
  >
    <select
      aria-invalid="false"
      class="w-full appearance-none bg-white border rounded-lg px-3 py-2.5 pr-10 transition-all cursor-pointer focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 disabled:bg-gray-100 disabled:text-gray-400 disabled:cursor-not-allowed border-gray-300"
    >
      <option
        value=""
      >
        選択してください
      </option>
      <option
        value="1"
      >
        Option 1
      </option>
      <option
        value="2"
      >
        Option 2
      </option>
    </select>
    <div
      class="absolute right-3 flex items-center pointer-events-none text-gray-400"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </div>
  </div>
</div>
`;
